# smart-anytool-agent

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  retriever.py  schemas.py  smart.py  tools.py  validation.py
.github/workflows/: diagram-sync.yml
docs/: architecture.mmd  phase-1-tool-schemas.md  phase-10-cli-entry-point.md  phase-2-real-world-api-tools.md  phase-3-safe-expression-evaluation.md  phase-4-self-awareness-check.md  phase-5-hierarchical-tool-filtering.md  phase-6-validation-and-dispatch.md  phase-7-agent-loop.md  phase-8-parallel-tool-calls.md  phase-9-self-reflection.md
docs/additional-notes/: smart-self-awareness-layer.md
prompts/: self_awareness.txt  tool_filter.txt
tests/: test_calculator.py  test_retriever.py  test_schemas.py  test_smart.py  test_tools.py  test_validation.py
