[project]
name = "smart-anytool-agent"
version = "0.1.0"
description = "A tool-calling agent implementing SMART (ACL 2025) and AnyTool (ICML 2024) concepts"
requires-python = ">=3.12"

dependencies = []

[project.urls]
Repository = "https://github.com/Buffden/smart-anytool-agent"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"
