[project]
name = "smart-anytool-agent"
version = "0.1.0"
description = "A tool-calling agent implementing SMART (ACL 2025) and AnyTool (ICML 2024) concepts"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[project.urls]
Repository = "https://github.com/Buffden/smart-anytool-agent"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
